test/load-test/k6/docker-bg/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app
spec:
  type: ClusterIP
  ports:
    - name: app
      protocol: TCP
      port: 80
      targetPort: 80
  selector:
    app: blue
    tier: backend
